--- a/css/style.css
+++ b/css/style.css
@@ -35,8 +35,17 @@ body {
 .menu_lateral {
     display: flex;
     flex-direction: column;
-    width: 75vh;
-    height: 100vh;
+    background-color: #15191C;
+    width: 75vw;
+    height: calc(100vh - 64px);
+    position: absolute;
+    left: -100vw;
+    transition: .25s;
+}
+
+.menu_lateral.ativo {
+    left: 0;
+    transition: .25s;
 }
 
 .menu_lateral_logo {
@@ -48,13 +57,46 @@ body {
 .menu_lateral_link {
     height: 64px;
     color: #95999C;
+    padding-left: 64px;
+    display: flex;
+    align-items: center;
 }
 
 .menu_lateral_link::before {
-    content: "";
+    content: "\e900";
     width: 24px;
     height: 24px;
     font-size: 24px;
     position: absolute;
     left: 24px;
+}
+
+.menu_lateral_link.ativo {
+    color: #FFFFFF;
+    padding: left 56px;
+    border-left: 8px solid #FFFFFF;
+}
+
+.menu_lateral_link.inicio::before {
+    content: "\e902";
+}
+
+.menu_lateral_link.videos::before {
+    content: "\e90e";
+}
+
+.menu_lateral_link.picos::before {
+    content: "\e909";
+}
+
+.menu_lateral_link.integrantes::before {
+    content: "\e903";
+}
+
+.menu_lateral_link.camisas::before {
+    content: "\e900";
+}
+
+.menu_lateral_link.pinturas::before {
+    content: "\e90a";
 }
