--- a/css/style.css
+++ b/css/style.css
@@ -103,6 +103,8 @@ body {
 
 .principal {
     padding: 24px 16px;
+    display: grid;
+    gap: 16px;
 }
 
 .titulo_pagina {
@@ -117,10 +119,15 @@ body {
     background-color: #2C343A;
 }
 
+.cartao_destaque1 {
+    margin-bottom: 16px;
+}
+
 .cartao_conteudo {
     padding: 16px;
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: auto 1fr;
+    gap: 8px;
 }
 
 .cartao_destaque {
